# CMakeList.txt: minimum_sum_of_descent_path 的 CMake 项目，在此处包括源代码并定义
# 项目特定的逻辑。
#
cmake_minimum_required (VERSION 3.8)

project ("minimum_sum_of_descent_path")

# 将源代码添加到此项目的可执行文件。
add_executable (minimum_sum_of_descent_path "minimum_sum_of_descent_path.cpp" "minimum_sum_of_descent_path.h")

# TODO: 如有需要，请添加测试并安装目标。
