# CMakeList.txt: lc_2140_select_questions 的 CMake 项目，在此处包括源代码并定义
# 项目特定的逻辑。
#
cmake_minimum_required (VERSION 3.8)

project ("lc_2140_select_questions")

# 将源代码添加到此项目的可执行文件。
add_executable (lc_2140_select_questions "lc_2140_select_questions.cpp" "lc_2140_select_questions.h")

# TODO: 如有需要，请添加测试并安装目标。
